# Copyright 2018, 2019 Peter Dimov
# Distributed under the Boost Software License, Version 1.0.
# See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt

include(BoostTestJamfile OPTIONAL RESULT_VARIABLE HAVE_BOOST_TEST)

if(HAVE_BOOST_TEST)

add_library(boost_unordered_test_deps INTERFACE)
target_link_libraries(boost_unordered_test_deps INTERFACE Boost::unordered Boost::core Boost::concept_check)

# FCA tests
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/prime_fmod_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/fwd_set_test.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/fwd_map_test.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/allocator_traits.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/minimal_allocator.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/compile_set.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/compile_map.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/noexcept_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/link_test_1.cpp unordered/link_test_2.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/incomplete_test.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/simple_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/equivalent_keys_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/constructor_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/copy_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/move_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/post_move_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/assign_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/insert_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/insert_stable_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/insert_hint_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/emplace_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/unnecessary_copy_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/erase_tests.cpp COMPILE_DEFINITIONS BOOST_UNORDERED_SUPPRESS_DEPRECATED)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/erase_equiv_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/extract_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/node_handle_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/merge_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/find_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/at_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/bucket_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/load_factor_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/rehash_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/equality_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/swap_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/deduction_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/scoped_allocator.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/transparent_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/reserve_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/contains_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/erase_if.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/scary_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/constructor_exception_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/copy_exception_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/assign_exception_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/move_assign_exception_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/insert_exception_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/erase_exception_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/rehash_exception_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/swap_exception_tests.cpp COMPILE_DEFINITIONS BOOST_UNORDERED_SWAP_METHOD=2)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/merge_exception_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES exception/less_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/narrow_cast_tests.cpp)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/compile_set.cpp COMPILE_DEFINITIONS BOOST_UNORDERED_USE_MOVE NAME bmove_compile_set)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/compile_map.cpp COMPILE_DEFINITIONS BOOST_UNORDERED_USE_MOVE NAME bmove_compile_map)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/copy_tests.cpp COMPILE_DEFINITIONS BOOST_UNORDERED_USE_MOVE NAME bmove_copy)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/move_tests.cpp COMPILE_DEFINITIONS BOOST_UNORDERED_USE_MOVE NAME bmove_move)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/assign_tests.cpp COMPILE_DEFINITIONS BOOST_UNORDERED_USE_MOVE NAME bmove_assign)
boost_test(PREFIX unordered LINK_LIBRARIES boost_unordered_test_deps SOURCES quick.cpp)

boost_test(PREFIX unordered TYPE compile-fail LINK_LIBRARIES boost_unordered_test_deps NAME insert_node_type_fail_map COMPILE_DEFINITIONS UNORDERED_TEST_MAP SOURCES unordered/insert_node_type_fail.cpp)
boost_test(PREFIX unordered TYPE compile-fail LINK_LIBRARIES boost_unordered_test_deps NAME insert_node_type_fail_multimap COMPILE_DEFINITIONS UNORDERED_TEST_MULTIMAP SOURCES unordered/insert_node_type_fail.cpp)
boost_test(PREFIX unordered TYPE compile-fail LINK_LIBRARIES boost_unordered_test_deps NAME insert_node_type_fail_set COMPILE_DEFINITIONS UNORDERED_TEST_SET SOURCES unordered/insert_node_type_fail.cpp)
boost_test(PREFIX unordered TYPE compile-fail LINK_LIBRARIES boost_unordered_test_deps NAME insert_node_type_fail_multiset COMPILE_DEFINITIONS UNORDERED_TEST_MULTISET SOURCES unordered/insert_node_type_fail.cpp)


# FOA tests

boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/fwd_set_test.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/fwd_map_test.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/compile_set.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/compile_map.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/noexcept_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/incomplete_test.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/simple_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/equivalent_keys_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/constructor_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/copy_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/move_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/post_move_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/assign_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/insert_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/insert_hint_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/emplace_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/erase_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/merge_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/find_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/at_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/load_factor_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/rehash_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/equality_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/swap_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/transparent_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/reserve_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/contains_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/erase_if.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/scary_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/init_type_insert_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/max_load_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/extract_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/node_handle_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/uses_allocator.cpp)

boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/link_test_1.cpp unordered/link_test_2.cpp )
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES unordered/scoped_allocator.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps SOURCES unordered/hash_is_avalanching_test.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES exception/constructor_exception_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES exception/copy_exception_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES exception/assign_exception_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES exception/move_assign_exception_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES exception/insert_exception_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES exception/erase_exception_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES exception/rehash_exception_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES exception/swap_exception_tests.cpp)
boost_test(PREFIX unordered-foa LINK_LIBRARIES boost_unordered_test_deps COMPILE_DEFINITIONS BOOST_UNORDERED_FOA_TESTS SOURCES exception/merge_exception_tests.cpp)

# CFOA tests

boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/latch_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/insert_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/erase_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/try_emplace_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/emplace_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/visit_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/constructor_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/assign_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/clear_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/swap_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/merge_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/rehash_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/equality_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/fwd_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/exception_insert_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/exception_erase_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/exception_constructor_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/exception_assign_tests.cpp)
boost_test(PREFIX unordered-cfoa LINK_LIBRARIES boost_unordered_test_deps SOURCES cfoa/exception_merge_tests.cpp)

endif()
